--- a/kelinci/index.html
+++ b/kelinci/index.html
@@ -7,51 +7,44 @@
     <title>Home - LoginLess</title>
     <link rel="stylesheet" href="index.css" />
     <!-- Bootstrap CSS -->
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" /> -->
-    <!-- end Boostrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
   </head>
   <body>
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script> -->
-    <!-- ----------------------------------------------------------------------------------------------- -->
+    <nav>
+      <div class="judul">
+        <a class="logo" href="#"><img src="../img/gamer.png" alt="" /></a>
+        <a class="loginless" href="#">LoginLess</a>
+      </div>
+      <ul class="menu">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Product</a></li>
+        <li><a href="#">Galery</a></li>
+        <li><a href="#">Service</a></li>
+        <li><a href="#">About</a></li>
+      </ul>
+      <!-- dropdown -->
 
-    <div class="home">
-      <!-- header -->
-      <div class="header">
-        <h2>Hi' Lovianno</h2>
-      </div>
-      <!-- navbar -->
-      <nav>
-        <div class="judul">
-          <h1>LoginLess</h1>
-        </div>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Product</a></li>
-          <li><a href="#">Galery</a></li>
-          <li><a href="#">Service</a></li>
-          <li><a href="#">About</a></li>
+      <div class="profil">
+        <div class="fotoProf"></div>
+        <h3 class="namaProf">Lovianno</h3>
+        <div class="dropbar"></div>
+        <ul class="ulDrop">
+          <li class="liDrop"><a class="link2 login" href="#">Login</a></li>
+          <li class="liDrop"><a class="link2 logout" href="#">Logout</a></li>
         </ul>
-        <!-- SEARCH -->
-        <div class="search">
-          <input type="search" placeholder="Search" autofocus />
-        </div>
-        <!-- END SEARCH -->
-        <div class="hamburger">
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
-      </nav>
-      <!-- end navbar -->
-      <div class="mulai">
-        <h3>Buy 2 Get Disc 40%</h3>
-        <div class="mulaiBelanja">
-          <h3>Mulai Belanja</h3>
-        </div>
       </div>
-    </div>
-    <!-- END HOME -->
+
+      <!-- End -->
+      <div class="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+    </nav>
+
+    <!-- BOOSTRAP JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
     <script src="index.js"></script>
   </body>
 </html>
