--- a/kelinci/index.html
+++ b/kelinci/index.html
@@ -12,7 +12,7 @@
   <body>
     <nav>
       <div class="judul">
-        <a class="logo" href="#"><img src="../img/gamer.png" alt="" /></a>
+        <a class="logo" href="#"><img src="../img/Jam2.jpg" alt="" /></a>
         <a class="loginless" href="#">LoginLess</a>
       </div>
       <ul class="menu">
